moving on to next project. fixed some spacing issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,7 +19,7 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  background-image: linear-gradient(indigo, cadetblue, indigo);
+  background-image: linear-gradient( black, #101010, black);
 }
 
 .vertical-center {
@@ -32,7 +32,6 @@ body {
   width: fit-content;
   -webkit-font-smoothing: antialiased;
   -moz-background-clip: text;
-  border: lightgrey 2px;
   padding: 10px;
   overflow: hidden;
   display: flex;
@@ -46,6 +45,8 @@ body {
   overflow: hidden;
   display: flex;
   flex-direction:column;
+  position: relative;
+  border: 5px solid black;
 }
 
 
@@ -56,16 +57,16 @@ body {
   background-color: red;
   /* flex-grow:1; */
   background: #443344;
-  /* position: fixed; */
+  position: absolute;
   padding: 35px, 10px, 75px, 20px;
-  width: 100%;
-  height: 95vh;
+  width: 100vw;
+  height: 100vh;
   box-shadow: 0 0 150px 15px black;
   justify-content: space-evenly;
   overflow: scroll; 
-  /* overflow-y: scroll; */
+  overflow-y: scroll;
   overflow-x: hidden;
-  flex-grow: 1;
+  /* flex-grow: 1; */
 }
 
 .row {
@@ -88,7 +89,7 @@ body {
 } 
 
 h1 {
-  font-size: 2.7em;
+  font-size: 2.9em;
   font-weight: 800px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
@@ -110,7 +111,7 @@ a {
 }
 
 .jumbotron {
-  width: 90%;
+  width: 95%;
   background-image: url("../images/stars_background.jpg");
   margin-top: 0%;
   height: fit-content;
@@ -125,7 +126,7 @@ img {
   border: #121212 solid 1.5px;
   margin-bottom: 1px;
   justify-content: space-evenly;
-  opacity: 0.85;
+  opacity: 0.75;
 }
 
 #art {
@@ -135,12 +136,12 @@ img {
   opacity: 0.85;
 }
 h3 {
-  font-size: 1.8em;
+  font-size: 1.6em;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   color: #040404;
-  font-weight:800;
-  text-shadow: 0.5px 0.5px  darkgray;
+  font-weight:1000;
+  text-shadow: 0.05px 0.05px  whitesmoke;
   text-align: center;
   flex-wrap: nowrap;
   /* margin-top: 1%; */
@@ -161,7 +162,7 @@ p {
   width: 100%;
   color: lightgrey;
   font-size: 0.8em;
-  padding: 1.7%;
+  padding: 1.8%;
   font-weight: 400;
   text-shadow: 2.5px 2.5px black;
   position: flex;
@@ -170,7 +171,7 @@ p {
 }
 
 #p1 {
-  font-size: 1.4em;
+  font-size: 1.3em;
 }
 
 li {
@@ -217,8 +218,9 @@ a {
 
 #lightgreen {
   color: palegreen;
-  margin-top: 2%;
+  margin-top: 3%;
   font-size: 0.7em;
+  margin-bottom: 0%;
   /* font-size: 0.9em; */
 
 }
@@ -231,7 +233,7 @@ a {
 h2 {
   color: lightgray;
   font-weight: 900;
-  margin-top: 0%;
+  margin-top: 1%;
   text-align: center;
   text-shadow: 4%;
   font-size: 1.5em;
@@ -240,12 +242,12 @@ h2 {
 
 
 h4 {
-  font-size: 1.15em;
+  font-size: 1.05em;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   color: darkcyan;
   padding-top: 3%;
-  text-shadow: 1.3px 0.5px black;
+  text-shadow: 1.5px 0.8px black;
   font-weight: 900;
 }
 
